# project-4

./: .flake8  README.md  pyproject.toml
src/: masks.py  processing.py  widget.py
tests/: test_masks.py
